k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: player-service
  labels:
    app: player-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: player-service
  template:
    metadata:
      labels:
        app: player-service
    spec:
      serviceAccountName: player-service-sa 
      imagePullSecrets:
        - name: dockerhub-secret 
      containers:
        - name: player-service
          image: bihou/chess-player-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
