k8s/match-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: match-service
  labels:
    app: match-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: match-service
  template:
    metadata:
      labels:
        app: match-service
    spec:
      containers:
        - name: match-service
          image: bihou/chess-match-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
