k8s/match-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: match-service
spec:
  selector:
    app: match-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  type: ClusterIP
