k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chess-gateway
spec:
  rules:
    - http:
        paths:
          - path: /api/players
            pathType: Prefix
            backend:
              service:
                name: player-service
                port:
                  number: 80
          - path: /api/matches
            pathType: Prefix
            backend:
              service:
                name: match-service
                port:
                  number: 80
